--- a/index.html
+++ b/index.html
@@ -216,10 +216,12 @@ footer{
       <h3>Smart Alert System</h3>
       <p>LED & buzzer progressive warning.</p>
     </div>
-    <div class="card">
-      <h3>Auto Screen Control</h3>
-      <p>Relay turns off TV automatically.</p>
-    </div>
+    <a href="http://192.168.4.1" target="_blank" style="text-decoration:none; color:inherit;">
+  <div class="card">
+    <h3>Auto Screen Control</h3>
+    <p>Relay turns off TV automatically.</p>
+  </div>
+</a>
     <div class="card">
       <h3>Manual Override</h3>
       <p>Push button reactivates screen.</p>
@@ -266,4 +268,5 @@ window.addEventListener("scroll",()=>{
 </script>
 
 </body>
+</html>
                                        </html>
