--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ body{
   color:var(--text);
   scroll-behavior:smooth;
   transition:0.4s;
+  overflow-x:hidden;
 }
 
 /* NAV */
@@ -48,7 +49,8 @@ nav{
   padding:20px 10%;
   position:fixed;
   width:100%;
-  backdrop-filter:blur(10px);
+  backdrop-filter:blur(12px);
+  background:rgba(0,0,0,0.2);
   z-index:1000;
 }
 
@@ -59,12 +61,17 @@ nav h2{
 nav ul{
   list-style:none;
   display:flex;
-  gap:30px;
+  gap:25px;
 }
 
 nav ul li a{
   color:var(--text);
   text-decoration:none;
+  transition:0.3s;
+}
+
+nav ul li a:hover{
+  color:var(--accent);
 }
 
 .toggle-btn{
@@ -86,48 +93,84 @@ nav ul li a{
   flex-direction:column;
   text-align:center;
   padding:0 20px;
+  position:relative;
+  overflow:hidden;
 }
 
+/* Developer Name */
+.dev-name{
+  position:absolute;
+  top:15px;
+  left:10%;
+  font-size:16px;
+  font-weight:700;
+  color:var(--accent);
+  text-shadow:0 0 8px var(--accent);
+}
+
+/* Hero Text */
 .hero h1{
-  font-size:60px;
+  font-size:65px;
   background:linear-gradient(90deg,var(--primary),var(--accent));
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  animation:fadeIn 1.5s ease;
+  animation:fadeIn 1.5s ease, gradientMove 3s infinite alternate;
 }
 
 .hero p{
-  margin-top:20px;
-  font-size:20px;
+  margin-top:10px;
+  font-size:22px;
   color:var(--sub);
   animation:fadeIn 2s ease;
 }
 
+/* Explore Button */
 .btn{
-  margin-top:30px;
-  padding:12px 30px;
+  margin-top:20px;
+  padding:14px 35px;
   border:none;
   border-radius:30px;
   background:var(--primary);
   color:#000;
   font-weight:600;
   cursor:pointer;
-  transition:0.3s;
+  box-shadow:0 0 15px var(--primary);
+  transition:0.4s;
 }
 
 .btn:hover{
   background:var(--accent);
   transform:scale(1.05);
+  box-shadow:0 0 25px var(--accent);
+}
+
+/* Hero Image */
+.hero-image{
+  margin-top:35px;
+  animation:fadeIn 2.5s ease;
+}
+
+.hero-image img{
+  width:400px;
+  max-width:90%;
+  border-radius:20px;
+  box-shadow:0 0 35px var(--primary);
+  transition:0.4s;
+}
+
+.hero-image img:hover{
+  transform:scale(1.05);
+  box-shadow:0 0 50px var(--accent);
 }
 
 /* SECTIONS */
 section{
-  padding:100px 10%;
+  padding:120px 10%;
 }
 
 .section-title{
   text-align:center;
-  font-size:40px;
+  font-size:42px;
   margin-bottom:60px;
   color:var(--primary);
 }
@@ -155,7 +198,7 @@ section{
 }
 
 .card:hover{
-  box-shadow:0 0 25px var(--primary);
+  box-shadow:0 0 30px var(--primary);
 }
 
 .card h3{
@@ -181,10 +224,23 @@ footer{
   color:var(--sub);
 }
 
-/* ANIMATION */
+/* Animations */
 @keyframes fadeIn{
   from{opacity:0; transform:translateY(20px);}
   to{opacity:1; transform:translateY(0);}
+}
+
+@keyframes gradientMove{
+  0%{background-position:0%;}
+  100%{background-position:100%;}
+}
+
+/* Responsive */
+@media(max-width:768px){
+  .hero h1{font-size:45px;}
+  .hero p{font-size:18px;}
+  .hero-image img{width:280px;}
+  .dev-name{font-size:14px; top:10px; left:5%;}
 }
 </style>
 </head>
@@ -200,9 +256,17 @@ footer{
 </nav>
 
 <div class="hero">
+  <!-- Developer Name -->
+  <div class="dev-name">DEVELOPED by K.N.VANEL FERNANDO</div>
+
   <h1>VisionGuard</h1>
   <p>Intelligent Screen Safety System</p>
   <button class="btn" onclick="scrollToFeatures()">Explore Project</button>
+
+  <!-- Hero Image -->
+  <div class="hero-image">
+    <img src="visionguard.png" alt="VisionGuard Project">
+  </div>
 </div>
 
 <section id="features">
@@ -217,11 +281,11 @@ footer{
       <p>LED & buzzer progressive warning.</p>
     </div>
     <a href="http://192.168.4.1" target="_blank" style="text-decoration:none; color:inherit;">
-  <div class="card">
-    <h3>Auto Screen Control</h3>
-    <p>Relay turns off TV automatically.</p>
-  </div>
-</a>
+      <div class="card">
+        <h3>Auto Screen Control</h3>
+        <p>Relay turns off TV automatically.</p>
+      </div>
+    </a>
     <div class="card">
       <h3>Manual Override</h3>
       <p>Push button reactivates screen.</p>
@@ -231,14 +295,14 @@ footer{
 
 <section id="code">
   <h2 class="section-title">Arduino Code Snippet</h2>
-<pre>
+  <pre>
 #define TRIG 5
 #define ECHO 18
 #define LED 19
 #define BUZZER 21
 #define RELAY 23
 #define BUTTON 4
-</pre>
+  </pre>
 </section>
 
 <footer>
@@ -256,7 +320,6 @@ function scrollToFeatures(){
 
 // Scroll animation
 const cards = document.querySelectorAll(".card");
-
 window.addEventListener("scroll",()=>{
   cards.forEach(card=>{
     const cardTop = card.getBoundingClientRect().top;
