--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ footer{
 </section>
 
 <footer>
-© 2026 VisionGuard | Intelligent Screen Safety
+© 2026 VisionGuard | Intelligent Screen Safety | Developed By @ W.K.N.V.Fernando
 </footer>
 
 <script>
