--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ footer{
 
   <!-- Hero Image -->
   <div class="hero-image">
-    <img src="visionguard.png" alt="VisionGuard Project">
+    <img src="visionguard.jpg" alt="VisionGuard Project">
   </div>
 </div>
 
