--- a/index.html
+++ b/index.html
@@ -294,9 +294,13 @@ footer{
 </section>
 
 <section id="code">
-  <h2 class="section-title">Arduino Code Snippet</h2>
+  <h2 class="section-title"> Main components</h2>
   <pre>
-#define TRIG 5
+Ultrasonic Sensor 
+  <div class="Ultrasonic Sensor">
+    <img src="visionguard.jpg" alt="Ultrasonic Sensor ">
+  </div>
+  </div>    
 #define ECHO 18
 #define LED 19
 #define BUZZER 21
