--- a/index.html
+++ b/index.html
@@ -296,27 +296,61 @@ footer{
 <section id="code">
   <h2 class="section-title"> Main components</h2>
   <pre>
-Ultrasonic Sensor 
-  <style>
-.ultrasonic img {
-  width: 300px;      /* image size */
-  height: auto;      /* ratio keep */
+<style>
+.device {
+  text-align: center;
+  margin: 15px;
+}
+
+.device img {
+  width: 120px;     /* image size */
+  height: auto;
   display: block;
-  margin: 10px auto; /* center */
+  margin: auto;
+}
+
+.device p {
+  font-family: Arial;
+  font-size: 14px;
+  margin-top: 5px;
 }
 </style>
 
-<div class="ultrasonic">
-  <img src="visionguard.jpg" alt="Ultrasonic Sensor">
+<!-- ESP32 -->
+<div class="device">
+  <img src="esp32-nodemcu-module-.jpg" alt="ESP32">
+  <p>ESP32</p>
 </div>
-   
-#define ECHO 18
-#define LED 19
-#define BUZZER 21
-#define RELAY 23
-#define BUTTON 4
-  </pre>
-</section>
+
+<!-- Ultrasonic Sensor -->
+<div class="device">
+  <img src="Ultrasonicsensor.jpg" alt="Ultrasonic Sensor">
+  <p>Ultrasonic Sensor</p>
+</div>
+
+<!-- Buzzer Module -->
+<div class="device">
+  <img src="buzermodule.jpg" alt="Buzzer Module">
+  <p>Buzzer Module</p>
+</div>
+
+<!-- Relay Module -->
+<div class="device">
+  <img src="relaymodule.jpg" alt="Relay Module">
+  <p>Relay Module</p>
+</div>
+
+<!-- IR Receiver -->
+<div class="device">
+  <img src="irrecever.jpg" alt="IR Receiver">
+  <p>IR Receiver</p>
+</div>
+
+<!-- LED -->
+<div class="device">
+  <img src="led.jpg" alt="LED">
+  <p>LED</p>
+</div>
 
 <footer>
 © 2026 VisionGuard | Intelligent Screen Safety | Developed By @ W.K.N.V.Fernando
