--- a/index.html
+++ b/index.html
@@ -277,8 +277,10 @@ footer{
       <p>Ultrasonic sensor monitors safe distance.</p>
     </div>
     <div class="card">
-      <h3>Smart Alert System</h3>
-      <p>LED & buzzer progressive warning.</p>
+  <h3>Smart Alert System</h3>
+  <p>
+    <a href="http://192.168.60.1" target="_blank">visionguard Smart Device Controler</a>
+  </p>
     </div>
     <a href="http://192.168.4.1" target="_blank" style="text-decoration:none; color:inherit;">
       <div class="card">
