--- a/index.html
+++ b/index.html
@@ -277,10 +277,12 @@ footer{
       <p>Ultrasonic sensor monitors safe distance.</p>
     </div>
     <div class="card">
-  <h3>visionguard Smart Device Controler</h3>
-  <p>
-    <a href="http://192.168.60.1" target="_blank"> Smart Device Controler</a>
-  </p>
+<a href="http://192.168.60.1" target="_blank" style="text-decoration:none; color:inherit;">
+  <div class="card">
+    <h3>Smart Device Controller</h3>
+    <p>visionguard Smart Device Controller</p>
+  </div>
+</a>
     </div>
     <a href="http://192.168.4.1" target="_blank" style="text-decoration:none; color:inherit;">
       <div class="card">
